--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE HTML>
-<html>
-<head> 
-    <title>Getting Started: Serving Web Content</title> 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>CodeCraft</title>
 </head>
 <body>
-    <p>Get your greeting <a href="/greeting">here</a></p>
+    <div id="reactdom"></div>
+    <script src="dist/dist.js"></script>
 </body>
 </html>
