--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>CodeCraft</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
-    <div id="reactdom"></div>
-    <script src="dist/dist.js"></script>
+<div id="reactdom"></div>
+<script src="dist/dist.js"></script>
 </body>
 </html>
