improved loading time

--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="reactdom"></div>
-    <script src="/static/dist.js"></script>
+    <script src="/static/js/main.bundle.js"></script>
 </body>
 </html>
